<resources>
    <string name="app_name">Prototype</string>
    <string name="recognize">Recognize</string>
    <string name="clear">Clear</string>
    <string name="writeHere">Write here.</string>
    <string name="mathematical">mathematical</string>
    <string name="chemical">chemical</string>
    <string name="image_view">Image View</string>
    <string name="detect">Detect</string>
    <string name="run_model"><![CDATA[Running the model...,]]></string>
    <string name="restart">Restart</string>
    <string name="select">Select</string>
    <string name="live">Live</string>
    <string name="get_started">Get Started</string>
</resources>